# factorizer

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  __init__.py  analyze_large_failure.py  benchmark.py  check_25117.py  cli.py  clippy.toml  completion-tasks.md  environment.yml  factor_25117.py  pyproject.toml  rfh3.py  rsa-numbers.txt  rust-toolchain.toml  rustfmt.toml  setup-cleanup-tasks.md  setup-tasks.md  test_25117  test_25117.rs  test_balanced.rs  test_large_debug  test_large_debug.rs  test_phi_guided.rs  test_phi_precision.rs
.archive/: CLAUDE.md  Makefile  benchmark.py  factorizer.py  rfh3_final_test.pkl
.archive/algorithms/: __init__.py  fermat_enhanced.py
.archive/axiom5/: accelerated_factorizer.py  meta_observer.py
.archive/benchmark/: axiom5_64bit_acceleration_showcase.py  axiom5_64bit_factorization_benchmark.py  axiom5_acceleration_demo.py  axiom5_true_acceleration_benchmark.py  benchmark_64bit_comprehensive.py  benchmark_64bit_quick.py  factorizer_64bit_benchmark.py  factorizer_64bit_benchmark_simple.py  factorizer_64bit_simple_results.json  run_64bit_benchmarks.sh  test_64bit_benchmark_quick.py  test_axiom5_minimal.py
.archive/core/: hierarchical_search.py
.archive/pattern_solver/: README.md  advanced_pattern.py  factor_decoder.py  test_rsa100.py
.archive/poly_solver/: debug_polynomial.py  (+7 more)
.cargo/: config.toml
.devcontainer/: Dockerfile  README.md  devcontainer-compose.json  devcontainer.json  docker-compose.yml  post-create.sh  validate.sh
algorithms/: balanced_search.py
archive/: README.md  __init__.py  cli.py  factorizer_optimized.py  test_state.json  tox.ini  ultra_accelerated_uor_factorizer.py  ultra_accelerated_uor_factorizer_v2.py
axiom1/: README.md  __init__.py  prime_geodesic.py
axiom2/: README.md  __init__.py  fibonacci_vortices.py
axiom3/: README.md  __init__.py  coherence.py  fold_topology.py  spectral_signature_cache.py
axiom4/: README.md  __init__.py  adaptive_observer.py
axiom5/: README.md  axiom_synthesis.py  failure_analysis.py  recursive_coherence.py  spectral_mirror.py
benches/: factorization.rs  simple_bench.rs
benchmark/: ULTIMATE_64BIT_BREAKTHROUGH_REPORT.md  benchmark_report.txt  debug_axiom5.py  debug_axioms.py  debug_individual_axioms.py  debug_test.py  performance_results.txt  ultimate_128bit_breakthrough.py
core/: __init__.py  lazy_iterator.py  multi_scale_resonance.py  state_manager.py
data/: empirical_patterns.json  observations.json  performance_analysis.json  rsa_observations.json  test_matrix.json
docs/: ARBITRARY_PRECISION_SUMMARY.md  EIGHT_BIT_STREAM_ARCHITECTURE.md  PATTERN_LAYERS.md  PRECISION_AUDIT.md  STREAM_REFACTOR_TASKS.md  conf.py  index.rst
eight_bit_pattern/: ARCHITECTURE.md  CHANNEL_COORDINATION_THEORY.md  COMPLETION_ROADMAP.md  CONSTANTS_DOCUMENTATION.md  Cargo.toml  README.md  TEST_REPORT.md
eight_bit_pattern/benches/: tuner.rs
eight_bit_pattern/examples/: analyze_channel_usage.rs  analyze_patterns.rs  channel_alignment_analyzer.rs  comprehensive_benchmark.rs  cross_validation.rs  debug_factorization.rs  scale_invariance_test.rs  test_advanced.rs  test_channel_coupling.rs  test_channel_suite.rs  test_dynamic_basis.rs  test_ensemble.rs  test_hierarchy.rs  test_parallel.rs  test_pattern_strategies.rs  test_phase_propagation.rs  test_position_aware.rs  test_special_cases.rs  test_tuning_thresholds.rs  tune_constants.rs  verify_properties.rs  visualize_resonance.rs
eight_bit_pattern/src/: basis.rs  channel.rs  constants.rs  coupling.rs  diagnostics.rs  ensemble.rs  hierarchy.rs  lib.rs  multi_scale.rs  parallel.rs  pattern.rs  phase.rs  resonance_extraction.rs  special_cases.rs  tuner.rs  tuning.rs  types.rs
eight_bit_pattern/tests/: integration.rs  verification.rs
examples/: analyze_bit_range_patterns.rs  analyze_constants.rs  analyze_large_patterns.rs  analyze_test_results.rs  basis_tuner.rs  debug_pattern.rs  debug_phi_search.rs  diagnostic_factorization.rs  diagnostic_framework.rs  discover.rs  discover_bit_range_constant.rs  execution_profiler.rs  extract_empirical_patterns.rs  generate_basis.rs  generate_enhanced_basis.rs  generate_test_matrix.rs  invariant_discovery.rs  large_scale.rs  observe.rs  observe_rsa.rs  parallel_demo.rs  pattern_diagnostic.rs  pattern_diagnostics.rs  quantum_search.rs  recognize.rs  test_128bit_factor_limit.rs  test_182bit.rs  test_arbitrary_precision_512bit.rs  test_basis_performance.rs  test_direct_empirical.rs  test_direct_empirical_comparison.rs  test_exact_arithmetic.rs  test_exact_beyond_224.rs  test_exact_small.rs  test_expanded_basis.rs  test_large_exact.rs  test_loaded_basis.rs  test_matrix_evaluation.rs  test_matrix_wave_synthesis.rs  test_pattern_arbitrary_precision.rs  (+14 more)
learning/: pattern_learner.py  zone_predictor.py
poly_solver/: README.md  adelic.py  harmonic.py  lie_algebra.py  pattern-generator-extreme.py  pattern-generator-showcase.py  pattern-generator.py  polynomial.py  polynomial_time_factorization_intro.ipynb  ppts-universal-basis-fixed.py  prime_emanation_research.py  prime_emanation_research_executed.ipynb  resonance_polynomial.py  test_ppts.py  universal_constants.json
prime_resonator/: README.md
prime_sieve/: README.md
rfh/: RFH2_SPEC.md  RFH3_SPEC.md  rfh1_discoveries.json  rfh2_diagnostic.py  rfh2_improved.py  rfh3.py  rfh3_final_perfect.py  rfh3_final_perfect_fixed.py  rfh3_tuned_final.py  rfh3_tuned_v2.py  rfh3_ultimate.py  test_rfh3_final.py  test_rfh3_simple.py
scripts/: generate_performance_figures.py  reproduce_paper_results.py
src/: error.rs  lib.rs  main.rs  utils.rs
test/: README.md  axiom_parameter_optimizer.py  debug_coherence_issue.py  debug_phase5_loop.py  identify_hanging_case.py  quick_validation.py  quick_validation_v2.py  run_comprehensive_tests.py  test_uor_optimization.py
tests/: __init__.py  capability_assessment.rs  correctness.rs  emergence.rs  integration.rs  performance_analysis.rs  precision.rs  quantum_enhanced.rs  rsa_challenges.rs  stress_test.py  test_memory_usage.py  test_rfh3.py  validate_mathematical_properties.py  validation_suite.rs
(+179 files in other folders)
