[package]
name = "rust_pattern_solver"
version = "0.1.0"
edition = "2021"
authors = ["The Pattern"]
description = "A pure implementation of The Pattern for integer factorization through empirical observation"
license = "MIT"
repository = "https://github.com/factorizer/rust_pattern_solver"
keywords = ["pattern", "factorization", "recognition", "mathematics", "empirical"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
# Arbitrary precision arithmetic
# Try with minimal features first to speed up compilation
rug = { version = "1.24", features = ["integer"] }
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# Data analysis
ndarray = { version = "0.15", features = ["rayon", "serde"] }
nalgebra = "0.32"
statrs = "0.16"
petgraph = "0.6"

# Serialization for observations
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Parallel observation
rayon = "1.8"
num_cpus = "1"

# Visualization of patterns
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "svg_backend"] }

# CLI and logging
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
env_logger = "0.11"
log = "0.4"
indicatif = "0.17"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
itertools = "0.12"
lazy_static = "1.4"
once_cell = "1.19"
chrono = "0.4"
libm = "0.2"
memmap2 = "0.9"
tempfile = "3"

[dev-dependencies]
# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
rand = "0.8"

# Benchmarking
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "factorization"
harness = false

[[bench]]
name = "simple_bench"
harness = false

[[example]]
name = "observe"
path = "examples/observe.rs"

[[example]]
name = "recognize"
path = "examples/recognize.rs"

[[example]]
name = "discover"
path = "examples/discover.rs"

[[example]]
name = "visualize"
path = "examples/visualize.rs"

[features]
default = []
# Enable additional visualization features
full-visualization = []
# Enable GPU acceleration (future)
gpu = []
# Enable distributed computing (future)
distributed = []